# reachy_mini_pomodoro

./: .gitignore  README.md  ROBOT_TEST.md  index.html  pyproject.toml  style.css
reachy_mini_pomodoro/: __init__.py  __main__.py  config.py  database.py  main.py  movements.py  pomodoro_timer.py  task_manager.py
reachy_mini_pomodoro/static/: index.html  main.js  style.css
reachy_mini_pomodoro/voice/: __init__.py  agent.py  head_wobbler.py  robot_voice.py  speech_tapper.py  tools.py  wake_word.py
