[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_pomodoro"
version = "0.1.0"
description = "A Pomodoro productivity timer app for Reachy Mini robot with Compita voice assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini>=1.0.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "uvicorn>=0.27.0",
    "openai>=1.0.0",
]
keywords = ["reachy-mini-app", "pomodoro", "productivity", "timer", "compita"]

[project.entry-points."reachy_mini_apps"]
reachy_mini_pomodoro = "reachy_mini_pomodoro.main:ReachyMiniPomodoro"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reachy_mini_pomodoro = ["**/*"]
